# VitaStellar-Contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  makefile
.github/: SECURITY.md
contracts/contract_template/: Cargo.toml
contracts/contract_template/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: approvals.rs  lib.rs  status.rs  types.rs  withdraw.rs
contracts/fido2_authenticator/: Cargo.toml
contracts/governor/: Cargo.toml
contracts/governor/src/: lib.rs
contracts/healthcare_payment/src/: errors.rs  test.rs
contracts/identity_registry/src/: comprehensive_tests.rs  errors.rs  lib.rs
contracts/medical_records/: Cargo.toml
contracts/medical_records/src/: lib.rs
contracts/patient_consent_management/src/: test.rs
contracts/timelock/: Cargo.toml
contracts/timelock/src/: lib.rs
contracts/zkp_registry/src/: lib.rs  range_proof.rs  recursive_proof.rs  test.rs
docs/: API_REFERENCE.md  ERROR_CODES.md  INPUT_VALIDATION_STANDARDS.md  MASTER_THREAT_MODEL.md  MEDICAL_RECORDS_REFACTORING.md  PUBLIC_API.md  TECHNICAL_DEBT.md
docs/portal/: index.html
libs/access_utils/: Cargo.toml
libs/access_utils/src/: lib.rs
schemas/docs/: api.json
