[workspace]
resolver = "2"
members = [
    "contracts/*",
    "libs/access_utils",
    "contract_optimizer",
    "tests",
    "tests/interoperability_suite",
]

[workspace.dependencies]
access_utils = { package = "access-utils", path = "libs/access_utils" }
soroban-sdk = { version = "=21.7.7" }
soroban-cli = "=21.7.7"
# Pin ed25519-dalek to the v2 series and compatible rand/rand_core versions.
# soroban-env-host v21.2.1 declares ed25519-dalek = ">=2.0.0" which allows
# Cargo to resolve v3 when no lockfile is present. ed25519-dalek v3 requires
# rand_core v0.10.x, incompatible with soroban-env-host's rand_chacha v0.3
# (rand_core v0.6.x), causing a trait-bound compile error in testutils.rs.
# The Cargo.lock committed in this repo pins these to known-good versions.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VitaStellar Contributors <hello@vitastellar.io>"]
license = "MIT"
repository = "https://github.com/VitaStellar/VitaStellar-Contracts"

# Force compatible versions to fix stellar-xdr dependency conflicts
# Note: arbitrary dependencies removed to fix workspace inheritance issues

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
