[package]
name = "fido2_authenticator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
access_utils = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
