[package]
name = "medical_records"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.7.7"
access-utils = { package = "access-utils", path = "../../libs/access_utils" }

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }
